# mermaid

./: Cargo.toml  README.md
src/: error.rs  identity.rs  inverse.rs  lib.rs  matrix.rs  prelude.rs  recip.rs  vec2.rs  vec3.rs
src/identity/: macros.rs
src/matrix/: aliases.rs  cmp.rs  dets.rs  iter.rs  ops.rs
src/matrix/iter/: cursor.rs
src/vec2/: cmp.rs  ops.rs
src/vec3/: cmp.rs  ops.rs
