[package]
name = "mermaid"
version = "0.2.0"
authors = ["Amirabbas Fazelinia <utilyre@proton.me>"]
edition = "2021"
description = "Experimental Linear Algebra"
repository = "https://github.com/utilyre/mermaid"
license-file = "LICENSE"
keywords = ["linear-algebra", "matrix", "vector"]
categories = ["data-structures", "game-development", "mathematics"]
